<resources>
    <string name="app_name">ThriftShop</string>
    <string name="thrift_shop">Thrift Shop</string>
    <string name="tagLine">your one stop designation</string>
    <string name="start_exploring">Start Exploring</string>
    <string name="signup">SignUp</string>
    <string name="or_sign_in_using_google">or sign in using google</string>
    <string name="otp">Generate Otp</string>
    <string name="verification">Verification</string>
    <string name="otpTitle">please enter the code we sent to +91 90*****931</string>
    <string name="didntreceivethecode">i didn\'t receive the code !!</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="proceed">PROCEED</string>
    <string name="name">Hello</string>
    <string name="exploring">start exploring</string>
    <string name="categories">Categories</string>
    <string name="category">category</string>
    <string name="price">$200</string>
    <string name="nameOfProduct">high heels</string>
    <string name="featuredProduct">Featured Products</string>
    <string name="logout">logout</string>
    <string name="Account">Account</string>
    <string name="details">details</string>
    <string name="Home">Home</string>
    <string name="open_navigation">open</string>
    <string name="close_navigation">close</string>
    <string name="filter">filter</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="UserName">Madonna</string>
    <string name="history">History</string>
    <string name="person">profile</string>
    <string name="men">men</string>
    <string name="women">women</string>
    <string name="kids">kids</string>
    <string name="filtered_text">show %1$d results </string>
    <string name="noResults">no result found.</string>
    <string name="google">Google</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="rent">rent</string>
    <string name="sample_text">Its a heels best worn for party and casual events</string>
    <string name="priceLabel">Price</string>
    <string name="priceData"> %1$.2f  </string>
    <string name="cart">cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="brand">Brand</string>
    <string name="clark_heels">Clark heels</string>
    <string name="size">Size</string>
    <string name="condition">Condition</string>
    <string name="pre_owned">Pre-owned</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_description">Item Description :</string>
    <string name="sleak_high_heels">Sleak high heels</string>
    <string name="_4_inch">4 inch</string>
    <string name="order_detail">Order Detail</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">proceed to checkout</string>
    <string name="back_arrow">back arrow</string>
    <string name="used">Used</string>
    <string name="unused">unused</string>
    <string name="price_label">price</string>
    <string name="type_label">Type</string>
    <string name="image_label">image_label</string>

    <array name="suggestion">
        <item>jacket</item>
        <item>t Shirt</item>
        <item>pant</item>
    </array>
</resources>