<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/backArrowCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:clickable="true"
        android:contentDescription="@string/image_label"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginBottom="35dp"
        android:src="@drawable/backbuttonicon"
        android:focusable="true" />
    <TextView
        android:id="@+id/title_text"
        android:text="@string/order_detail"
        android:textSize="18sp"
        android:fontFamily="@font/regular"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/cartTitle"
        android:text="@string/my_cart"
        android:textSize="24sp"
        android:fontFamily="@font/regular"
        android:layout_below="@+id/backArrowCart"
        android:layout_marginStart="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_below="@+id/cartTitle"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/checkoutLayout"
        android:layout_width="450dp"
        android:background="@drawable/cart_background"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/total"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:fontFamily="@font/regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/totalText"
            android:text="@string/price" />
        <Button
            android:id="@+id/checkout"
            android:text="@string/proceed_to_checkout"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
           android:layout_marginEnd="14dp"
            android:layout_marginTop="10dp"
            app:backgroundTint="@null"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/cart_proceedtocheckout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>



    </RelativeLayout>



</RelativeLayout>