<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".login.VerificationActivity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:clickable="true"
        android:src="@drawable/iconback"
        android:focusable="true" />
    <TextView
        android:id="@+id/title_text"
        android:text="@string/verification"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/yatra"
        android:textSize="34sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/subText"
        android:text="@string/otpTitle"
        android:layout_below="@+id/title_text"
        android:textSize="12sp"
        android:layout_marginLeft="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpLayout1"
        android:layout_below="@+id/subText"
        android:layout_marginTop="120dp"
        android:layout_marginStart="25dp"
        android:layout_width="72dp"
        app:boxBackgroundColor="#F2F6FE"
        android:layout_height="62dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/optnumber1"
            android:inputType="number"
            android:maxLength="1"
            android:background="@drawable/ic_squareotp"
            app:backgroundTint="@null"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpLayout2"
        android:layout_below="@+id/subText"
        android:layout_marginTop="120dp"
        android:layout_marginStart="25dp"
        android:layout_width="72dp"
        android:layout_toRightOf="@+id/otpLayout1"
        app:boxBackgroundColor="#F2F6FE"
        android:layout_height="62dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/optnumber2"
            android:inputType="phone"
            android:background="@drawable/ic_squareotp"
            app:backgroundTint="@null"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpLayout3"
        android:layout_below="@+id/subText"
        android:layout_marginTop="120dp"
        android:layout_marginStart="25dp"
        android:layout_width="72dp"
        android:layout_toRightOf="@+id/otpLayout2"
        app:boxBackgroundColor="#F2F6FE"
        android:layout_height="62dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/optnumber3"
            android:inputType="phone"
            android:background="@drawable/ic_squareotp"
            app:backgroundTint="@null"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpLayout4"
        android:layout_below="@+id/subText"
        android:layout_marginTop="120dp"
        android:layout_marginStart="25dp"
        android:layout_width="72dp"
        android:gravity="center_horizontal"
        android:layout_toRightOf="@+id/otpLayout3"
        app:boxBackgroundColor="#F2F6FE"
        android:layout_height="62dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/optnumber4"
            android:inputType="phone"
            android:background="@drawable/ic_squareotp"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpLayout1"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:text="@string/i_didnt_recive_the_code" />

    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpLayout1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/message"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/resend_otp"
        android:textColor="@color/button_color" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resendOtp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_proceed"
        android:text="@string/proceed"
        android:foreground="?android:attr/selectableItemBackground"

        app:backgroundTint="@null" />


</RelativeLayout>